--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
  
                   <h2>大島ミチル</h2>
                    
-	      <h3>nverse sin etendas mondoj du <h3>
+	      <h3>nverse sin eten<a href="https://holzora.top/d/">d</a>as mondoj du <h3>
 		   上下颠倒 两个世界</h3>
  
           <h3>Jen unu jen la alia tiritaj palpe<h3>
