--- a/d/index1.html
+++ b/d/index1.html
@@ -28,7 +28,7 @@
 
                   
 		<center>
-		    <h1>Ein Kleines Lied<h1>
+			<h1>Ein K<a href="https://holzora.top/d/l/">l</a>eines Lied<h1>
 			<h2>Candee!<h2>
 			 
 			<h3>Ich singe ein kleines lied
