--- a/d/l/index.html
+++ b/d/l/index.html
@@ -3,7 +3,7 @@
 <html lang="zh-CN">
 <head>
   <meta charset="utf-8">
-  <title>Patema Inverse</title>
+  <title>You Are Beautiful</title>
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="renderer" content="webkit" />
