--- a/d/l/n/index.html
+++ b/d/l/n/index.html
@@ -28,7 +28,7 @@
 
                   
 		<center>
-		    <h1>Speed of Light<h1>
+			<h1>Speed of L<a href="https://holzora.top/d/l/n/i/"i</a>ght<h1>
 			<h2>二宮愛<h2>
 			 
 			<h3>Look around you, everything's black and white
