--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 </head>
   <style>
   body{
-      background: #d9edf7;  
+      background: #d9edf7; 
+      text-decoration: none;
     }
   </style>
 <body>
