--- a/d/l/n/i/index.html
+++ b/d/l/n/i/index.html
@@ -17,7 +17,7 @@
         }
 </style>
 <body>
-    <h1>Be wit<a href="holzora/d/l/n/i/h/">h</a> you
+    <h1>Be wit<a href="holzora.top/d/l/n/i/h/">h</a> you
     <h2>Tiara
     <h3>I wanna be with you 描いた あの日の未来が
     <h3>我想和你在一起 当初与你在一起
