--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 		    <h3>我们的梦想必会实现</h3>
             
         </center>
-        <center><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" loop="loop" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=28457989&auto=1&height=66"></iframe></center>
+        <center><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=28457989&auto=1&height=66"></iframe></center>
      
       </div>
     </div> 
