--- a/website/d/l/index.html
+++ b/website/d/l/index.html
@@ -31,7 +31,7 @@
 		    <h1>You Are Beautiful<h1>
 			<h2>刘沁<h2>
 			 
-			<h3>Look i<a href="https://holzora.top/d/l/n/">n</a>to my eyes everything will be alright
+			<h3>Look i<a href="https://holzora.top/website/d/l/n/">n</a>to my eyes everything will be alright
 			<h3>你不要害怕
 			<h3>我不会忍心离开
 			<h3>我要抹去你眼中的泪
@@ -75,7 +75,7 @@
              
         </center>
         <audio id="myAudio" autoplay loop="loop"val="open">
-            <source src="https://holzora.top/audio/n.mp3"type=audio/mp3>
+            <source src="https://holzora.top/audio/l.mp3"type=audio/mp3>
       </div>
     </div> 
 </body>
