--- a/website/d/index.html
+++ b/website/d/index.html
@@ -28,7 +28,7 @@
 
                   
 		<center>
-			<h1>Ein K<a href="https://holzora.top/website/d//l/">l</a>eines Lied<h1>
+			<h1>Ein K<a href="https://holzora.top/website/d/l/">l</a>eines Lied<h1>
 			<h2>Candee!<h2>
 			 
 			<h3>Ich singe ein kleines lied
