--- a/webpage/d/l/index.html
+++ b/webpage/d/l/index.html
@@ -31,7 +31,7 @@
 		    <h1>You Are Beautiful<h1>
 			<h2>刘沁<h2>
 			 
-			<h3>Look i<a href="https://holzora.top/website/d/l/n/">n</a>to my eyes everything will be alright
+			<h3>Look i<a href="https://holzora.top/webpage/d/l/n/">n</a>to my eyes everything will be alright
 			<h3>你不要害怕
 			<h3>我不会忍心离开
 			<h3>我要抹去你眼中的泪
