--- a/webpage/d/l/n/index.html
+++ b/webpage/d/l/n/index.html
@@ -28,7 +28,7 @@
 
                   
 		<center>
-			<h1>Speed of L<a href="https://holzora.top/website/d/l/n/i/">i</a>ght<h1>
+			<h1>Speed of L<a href="https://holzora.top/webpage/d/l/n/i/">i</a>ght<h1>
 			<h2>二宮愛<h2>
 			 
 			<h3>Look around you, everything's black and white
