--- a/html/d/l/n/i/h/index.html
+++ b/html/d/l/n/i/h/index.html
@@ -12,8 +12,7 @@
 <style>
     body{
         background: #d9edf7;  
-        text-align: center;
-        
+        text-align: center
         }
     h1{text-decoration: none
       }
