--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@ body{
 </style>
 <body>
     <h1>星空小栈</h1>
-    <span><a href="https://holzora.top/html/">音乐</a></span> <span>博客</span>
+    <span><a href="https://holzora.top/html/" target="_blank">音乐</a></span> <span>博客</span>
 </body>
 </html>
