--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body{
     text-align: center
     }
 </style>
-<body>
+<body background="image/background.png">
     <h1>星空小栈</h1>
     <span><a href="https://holzora.top/html/" target="_blank">音乐</a></span> <span>博客</span>
 </body>
