--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ body{
     text-align: center
     }
 </style>
-<body background="image/background.png">
+<body>
     <h1>星空小栈</h1>
-    <span><a href="https://holzora.top/html/" target="_blank">音乐</a></span> <span>博客</span>
+    <span><a href="https://holzora.top/html/" target="_blank">音乐</a></span>&nbsp;&nbsp;&nbsp;&nbsp;<span>博客</span>
 </body>
 </html>
