--- a/html/catalog.html
+++ b/html/catalog.html
@@ -14,12 +14,12 @@
 </style>
 <body>
     <h2>歌曲目录</h2>
-    <h3><a href="html/">Patema inverse</a></h3>
-    <h3><a href="html/d/">Ein kleines lied</a></h3>
-    <h3><a href="html/d/l/">You are beautiful</a></h3>
-    <h3><a href="html/d/l/n/">Speed of light</a></h3>
-    <h3><a href="html/d/l/n/i/">Be with you</a></h3>
-    <h3><a href="html/d/l/n/i/h/">I'm here</a></h3>
-    <h3><a href="html/d/l/n/i/h/e/">Far away from home</a></h3>
+    <h3><a href="index.html">Patema inverse</a></h3>
+    <h3><a href="d/">Ein kleines lied</a></h3>
+    <h3><a href="d/l/">You are beautiful</a></h3>
+    <h3><a href="d/l/n/">Speed of light</a></h3>
+    <h3><a href="d/l/n/i/">Be with you</a></h3>
+    <h3><a href="d/l/n/i/h/">I'm here</a></h3>
+    <h3><a href="/d/l/n/i/h/e/">Far away from home</a></h3>
 </body>
 </html>
