--- a/html/catalog.html
+++ b/html/catalog.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>星空小栈</title>
-    <link rel='icon' href='image/title.ico' type='image/x-ico'>
+    <link rel='icon' href='holzora.top/image/title.ico' type='image/x-ico'>
 </head>
 <style>
     body{
