--- a/html/catalog.html
+++ b/html/catalog.html
@@ -35,6 +35,6 @@
     <h3><a href="d/l/n/">Speed of light</a></h3>
     <h3><a href="d/l/n/i/">Be with you</a></h3>
     <h3><a href="d/l/n/i/h/">I'm here</a></h3>
-    <h3><a href="/d/l/n/i/h/e/">Far away from home</a></h3>
+    <h3><a href="d/l/n/i/h/e/">Far away from home</a></h3>
 </body>
 </html>
