--- a/html/d/index.html
+++ b/html/d/index.html
@@ -16,6 +16,7 @@
   <meta HTTP-EQUIV="Cache-Control" CONTENT="no-store, must-revalidate"> 
   <meta HTTP-EQUIV="expires" CONTENT="Wed, 26 Feb 1997 08:21:57 GMT"> 
   <meta HTTP-EQUIV="expires" CONTENT="0">
+  <link rel='icon' href='https://holzora.top/image/title.ico' type='image/x-ico'>
 </head>
   <style>
   body{
