--- a/html/d/l/n/i/h/index.html
+++ b/html/d/l/n/i/h/index.html
@@ -8,6 +8,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <title>I'm here</title>
+    <link rel='icon' href='https://holzora.top/image/title.ico' type='image/x-ico'>
 </head>
 <style>
     body{
