--- a/html/d/l/n/i/h/e/index.html
+++ b/html/d/l/n/i/h/e/index.html
@@ -101,7 +101,7 @@
     <h3>没有你的相伴 我依然远离家园</h3>
     <!--
     source of song/lyric:internet
-    lyric translation:qqmusic
+    lyric translation:internet
     -->
     <audio id="myAudio" autoplay loop="loop"val="open">
         <source src="https://holzora.top/audio/e.mp3"type=audio/mp3>
