--- a/html/catalog.html
+++ b/html/catalog.html
@@ -22,6 +22,7 @@
       url[4]="d/l/n/i/";
       url[5]="d/l/n/i/h/";
       url[6]="d/l/n/i/h/e/";
+      url[7]="d/l/n/i/h/e/y/";
       var ints=parseInt(Math.random()*(url.length));
       window.open(url[ints]);//本窗口打开     
       //window.location=url[ints];//新窗口打开 
@@ -37,5 +38,6 @@
     <h3><a href="d/l/n/i/">Be with you</a></h3>
     <h3><a href="d/l/n/i/h/">I'm here</a></h3>
     <h3><a href="d/l/n/i/h/e/">Far away from home</a></h3>
+    <h3><a href="d/l/n/i/h/e/y/">The salewater room</a></h3>
 </body>
 </html>
