--- a/index.html
+++ b/index.html
@@ -18,5 +18,14 @@ body{
 <body>
     <h1>星空小栈</h1>
     <span><a href="html/catalog.html" target="_blank">音乐</a></span>&nbsp;&nbsp;&nbsp;&nbsp;<span>博客</span>
+    <form action="http://baidu.com/s" method="get">
+        <div>
+             <label for="search"></label>
+             <input name="wd" id="search" value="">
+        </div>
+        <div>
+             <button>搜索</button>
+        </div>
+    </form>
 </body>
 </html>
