--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@ body{
     }
 .user-input {
     width: 300px;
-     height: 40px;
+    height: 40px;
     border: 2px solid blue;
     border-radius: 5px;
     box-sizing: border-box;
     outline: none;
     text-indent: 10px;
+    margin-top:20px;
     }
 </style>
 <body>
