--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@ body{
 </style>
 <body>
     <h1>星空小栈</h1>
-    <span><a href="html/catalog.html" target="_blank">音乐</a></span>&nbsp;&nbsp;&nbsp;&nbsp;<span>博客</span>
+    <span><a href="html/catalog.html" target="_blank">音乐</a></span>&nbsp;&nbsp;&nbsp;&nbsp;<span><a href="http://sizhicn.com/bookcase.php">小说</a></span>&nbsp;&nbsp;&nbsp;&nbsp;<span><a href="https://ddrk.me/">电影</a></span>&nbsp;&nbsp;&nbsp;&nbsp;<span><a href="https://www.pixiv.net/">插画</a></span>
     <form action="http://baidu.com/s" method="get">
         <label for="search"></label>
         <input class="user-input" type="text" name="wd" id="search" placeholder="请输入搜索关键词">
     </form>
+    <span><a href="https://bbs.nga.cn/">nga</a></span>&nbsp;&nbsp;&nbsp;&nbsp;<span><a href="https://keylol.com/">keylol</a></span>
 </body>
 </html>
