--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ a{
 </style>
 <body>
     <br><br><br><br>
-    <h1>星空小栈</h1>
+    <h1><a href="https://holzora.top/" style="color:black;text-decoration:none;">星空小栈</a></h1>
     <br>
     <span><a href="html/catalog.html" target="_blank">音乐</a></span>&nbsp;&nbsp;&nbsp;&nbsp;<span><a href="http://sizhicn.com/bookcase.php">小说</a></span>&nbsp;&nbsp;&nbsp;&nbsp;<span><a href="https://ddrk.me/">电影</a></span>&nbsp;&nbsp;&nbsp;&nbsp;<span><a href="https://www.pixiv.net/">插画</a></span>
     <form action="http://baidu.com/s" method="get">
