--- a/html/catalog.html
+++ b/html/catalog.html
@@ -11,9 +11,14 @@
     <link rel='icon' href='https://holzora.top/image/title.ico' type='image/x-ico'>
 </head>
 <style>
-    body{
-        text-align: center
-        }
+body{
+    text-align: center
+    }
+a{
+    text-decoration: none;
+    }
+a:link { color:#0000FF; }
+a:visited { color:#0000FF; }
 </style>
 <script language="javascript">
     function catalog(){
@@ -32,7 +37,7 @@
      }
 </script>
 <body>
-    <h1>星空小栈</h1>
+    <h1><a href="https://holzora.top/" style="color:black;text-decoration:none;">星空小栈</a></h1>
     <h2><a href="javascript:catalog()" title="点击随机播放下列歌曲">歌曲目录</a></h2>
     <h3><a href="index.html">Patema inverse</a></h3>
     <h3><a href="d/">Ein kleines lied</a></h3>
