--- a/html/d/l/n/i/h/e/index.html
+++ b/html/d/l/n/i/h/e/index.html
@@ -17,7 +17,7 @@
         }
 </style>
 <body>
-    <h1>Far awa<a href="y/">y</a> from home
+    <h1>Far a<a href="w/">w</a>ay from home
     <h2>Groove Coverage
     <h3>I'm loving living every single day
     <h3>我是如此的享受每一天的生活
