--- a/html/catalog.html
+++ b/html/catalog.html
@@ -30,7 +30,7 @@ a:visited { color:#0000FF; }
       url[4]="d/l/n/i/";
       url[5]="d/l/n/i/h/";
       url[6]="d/l/n/i/h/e/";
-      url[7]="d/l/n/i/h/e/y/";
+      url[7]="d/l/n/i/h/e/w/";
       var ints=parseInt(Math.random()*(url.length));
       window.open(url[ints]);//本窗口打开     
       //window.location=url[ints];//新窗口打开 
@@ -46,6 +46,6 @@ a:visited { color:#0000FF; }
     <h3><a href="d/l/n/i/">Be with you</a></h3>
     <h3><a href="d/l/n/i/h/">I'm here</a></h3>
     <h3><a href="d/l/n/i/h/e/">Far away from home</a></h3>
-    <h3><a href="d/l/n/i/h/e/y/">The salewater room</a></h3>
+    <h3><a href="d/l/n/i/h/e/w/">The salewater room</a></h3>
 </body>
 </html>
