--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@ a{
     text-indent: 10px;
     margin-top:26px;
     }
+input::-ms-input-placeholder{ text-align: center; } 
+input::-webkit-input-placeholder{ text-align: center; }
 a:link { color:#0000FF; }
 a:visited { color:#0000FF; }
 </style>
@@ -37,7 +39,7 @@ a:visited { color:#0000FF; }
     <span><a href="html/catalog.html" target="_blank">音乐</a></span>&nbsp;&nbsp;&nbsp;&nbsp;<span><a href="http://m.sizhicn.com/bookcase.php">小说</a></span>&nbsp;&nbsp;&nbsp;&nbsp;<span><a href="https://ddrk.me/">电影</a></span>&nbsp;&nbsp;&nbsp;&nbsp;<span><a href="https://www.pixiv.net/">插画</a></span>
     <form action="http://baidu.com/s" method="get">
         <label for="search"></label>
-        <input class="user-input" type="text" name="wd" id="search" placeholder="请输入搜索关键词">
+        <input class="user-input" type="text" name="wd" id="search" placeholder="请输入关键词搜索">
     </form>
     <br>
     <span><a href="https://bbs.nga.cn/">nga</a></span>&nbsp;&nbsp;&nbsp;&nbsp;<span><a href="https://keylol.com/">keylol</a></span>
