--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ a{
     border-radius: 5px;
     box-sizing: border-box;
     outline: none;
-    text-indent:2px;
+    text-indent: none;
     margin-top:26px;
     }
 input::-ms-input-placeholder{ text-align: center; } 
