--- a/html/d/l/n/i/h/e/index.html
+++ b/html/d/l/n/i/h/e/index.html
@@ -12,9 +12,14 @@
 </head>
 <style>
     body{
-        background: #d9edf7;  
-        text-align: center;
+        background: #d9edf7;
+        text-align: center
         }
+    a{
+        text-decoration: none;
+        }
+    a:link { color:#0000FF; }
+    a:visited { color:#0000FF; }
 </style>
 <body>
     <h1>Far a<a href="w/">w</a>ay from home
@@ -104,7 +109,7 @@
     lyric translation:internet
     -->
     <audio id="myAudio" autoplay loop="loop"val="open">
-        <source src="https://holzora.top/audio/e.mp3"type=audio/mp3>
+    <source src="https://holzora.top/audio/e.mp3"type=audio/mp3>
     </audio>
 </body>
 </html>
