--- a/html/d/l/n/i/h/e/w/index.html
+++ b/html/d/l/n/i/h/e/w/index.html
@@ -12,9 +12,14 @@
 </head>
 <style>
     body{
-        background: #d9edf7;  
-        text-align: center;
+        background: #d9edf7;
+        text-align: center
         }
+    a{
+        text-decoration: none;
+        }
+    a:link { color:#0000FF; }
+    a:visited { color:#0000FF; }
 </style>
 <body>
     <h1>The saltwater room</h1>
@@ -107,7 +112,7 @@
     lyric translation:internet
     -->
     <audio id="myAudio" autoplay loop="loop"val="open">
-        <source src="https://holzora.top/audio/w.mp3"type=audio/mp3>
+    <source src="https://holzora.top/audio/w.mp3"type=audio/mp3>
     </audio>
 </body>
 </html>
