--- a/html/d/l/n/i/h/index.html
+++ b/html/d/l/n/i/h/index.html
@@ -12,11 +12,14 @@
 </head>
 <style>
     body{
-        background: #d9edf7;  
+        background: #d9edf7;
         text-align: center
         }
-    h1{text-decoration: none
-      }
+    a{
+        text-decoration: none;
+        }
+    a:link { color:#0000FF; }
+    a:visited { color:#0000FF; }
 </style>
 <body>
     <h1>I'm h<a href="e/">e</a>re</h1>
@@ -57,8 +60,12 @@
     <h3>我祈祷着。来寻找我吧。
     <h3>Hold me on your heart. I'm always here.
     <h3>把我捧在你的心上。我一直都在这里。</h3>
+    <!--
+    source of song/lyric:internet
+    lyric translation:internet
+    -->
     <audio id="myAudio" autoplay loop="loop"val="open">
-        <source src="https://holzora.top/audio/h.mp3"type=audio/mp3>
+    <source src="https://holzora.top/audio/h.mp3"type=audio/mp3>
     </audio>
 </body>
 </html>
