--- a/html/d/l/n/i/index.html
+++ b/html/d/l/n/i/index.html
@@ -12,12 +12,14 @@
 </head>
 <style>
     body{
-        background: #d9edf7;  
-        text-align: center;
+        background: #d9edf7;
+        text-align: center
+        }
+    a{
         text-decoration: none;
         }
-    .a{text-decoration: none;
-      }
+    a:link { color:#0000FF; }
+    a:visited { color:#0000FF; }
 </style>
 <body>
     <h1>Be wit<a href="h/">h</a> you
@@ -80,7 +82,12 @@
     <h3>说声谢谢 谢谢 谢谢
     <h3>いつでも いつまでも I love you
     <h3>无论何时 无论何时 I love you</h3>
+    <!--
+    source of song/lyric:internet
+    lyric translation:internet
+    -->
     <audio id="myAudio" autoplay loop="loop"val="open">
-        <source src="https://holzora.top/audio/i.mp3"type=audio/mp3>
+    <source src="https://holzora.top/audio/i.mp3"type=audio/mp3>
+    </audio>
 </body>
 </html>
