--- a/html/catalog.html
+++ b/html/catalog.html
@@ -39,13 +39,13 @@
 <body>
     <h1><a href="https://holzora.top/" style="color:black;text-decoration:none;">星空小栈</a></h1>
     <h2><a href="javascript:catalog()" title="点击随机播放下列歌曲">歌曲目录</a></h2>
-    <h3><a href="index.html">Patema inverse</a></h3>
-    <h3><a href="d/">Ein kleines lied</a></h3>
-    <h3><a href="d/l/">You are beautiful</a></h3>
-    <h3><a href="d/l/n/">Speed of light</a></h3>
-    <h3><a href="d/l/n/i/">Be with you</a></h3>
-    <h3><a href="d/l/n/i/h/">I'm here</a></h3>
-    <h3><a href="d/l/n/i/h/e/">Far away from home</a></h3>
-    <h3><a href="d/l/n/i/h/e/w/">The salewater room</a></h3>
+    <h3><a href="index.html" target="_blank">Patema inverse</a></h3>
+    <h3><a href="d/" target="_blank">Ein kleines lied</a></h3>
+    <h3><a href="d/l/" target="_blank">You are beautiful</a></h3>
+    <h3><a href="d/l/n/" target="_blank">Speed of light</a></h3>
+    <h3><a href="d/l/n/i/" target="_blank">Be with you</a></h3>
+    <h3><a href="d/l/n/i/h/" target="_blank">I'm here</a></h3>
+    <h3><a href="d/l/n/i/h/e/" target="_blank">Far away from home</a></h3>
+    <h3><a href="d/l/n/i/h/e/w/" target="_blank">The salewater room</a></h3>
 </body>
 </html>
