--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ a:visited { color:#0000FF; }
     <h1><a href="https://holzora.top/" style="color:black;text-decoration:none;">星空小栈</a></h1>
     <br>
     <span><a href="html/catalog.html">音乐</a></span>&nbsp;&nbsp;&nbsp;&nbsp;<span><a href="http://m.sizhicn.com/bookcase.php" target="_blank">小说</a></span>&nbsp;&nbsp;&nbsp;&nbsp;<span><a href="https://ddrk.me/" target="_blank">电影</a></span>&nbsp;&nbsp;&nbsp;&nbsp;<span><a href="https://www.pixiv.net/"target="_blank">插画</a></span>
-    <form action="http://baidu.com/s" method="get">
+    <form action="http://baidu.com/s" target="_blank" method="get">
         <label for="search"></label>
         <input class="user-input" type="text" name="wd" id="search" placeholder="请输入关键词搜索">
     </form>
