--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,15 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   <title>Patema inverse</title>
   <link rel='icon' href='https://holzora.top/image/title.ico' type='image/x-ico'>
+  <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?8be43ebecbd8a2ea29801a4997c95208";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+    </script>    
 </head>
 <style>
     body{
