--- a/index.html
+++ b/index.html
@@ -52,5 +52,11 @@ a:visited { color:#0000FF; }
     </form>
     <br>
     <span><a href="https://bbs.nga.cn/" target="_blank">nga</a></span>&nbsp;&nbsp;&nbsp;&nbsp;<span><a href="https://keylol.com/" target="_blank">keylol</a></span>
+    <br><br><br><br><br><br><br><br>
+    <SCRIPT>
+        var d = new Date();
+       document.write(d.getFullYear() + "年" +(d.getMonth() + 1) + "月" + d.getDate() + "日");
+       document.write(' 星期'+'日一二三四五六'.charAt(new Date().getDay()));
+    </SCRIPT>
 </body>
 </html>
