--- a/index.html
+++ b/index.html
@@ -41,6 +41,18 @@ input::-webkit-input-placeholder{ text-align: center; }
 a:link { color:#0000FF; }
 a:visited { color:#0000FF; }
 </style>
+<script type="text/javascript">  
+    function disptime(){  
+        var today=new Date();  
+        var hh=today.getHours();  
+        var mm=today.getMinutes();  
+        var ss = today.getSeconds();  
+        document.getElementById("myclock").innerHTML="<p>"+hh+":"+mm+":"+ss+"</p>"
+          
+    }   
+    //setInterval（）方法可以按照指定的周期调用函数或计算表达式  
+    var mytime = setInterval("disptime()",1000);  
+</script> 
 <body>
     <br><br><br><br>
     <h1><a href="https://holzora.top/" style="color:black;text-decoration:none;">星空小栈</a></h1>
@@ -52,7 +64,8 @@ a:visited { color:#0000FF; }
     </form>
     <br>
     <span><a href="https://bbs.nga.cn/" target="_blank">nga</a></span>&nbsp;&nbsp;&nbsp;&nbsp;<span><a href="https://keylol.com/" target="_blank">keylol</a></span>
-    <br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br>
+    <div id="myclock"></div>
     <SCRIPT>
         var d = new Date();
        document.write(d.getFullYear() + "年" +(d.getMonth() + 1) + "月" + d.getDate() + "日");
