--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ input::-ms-input-placeholder{ text-align: center; }
 input::-webkit-input-placeholder{ text-align: center; }
 a:link { color:#0000FF; }
 a:visited { color:#0000FF; }
+script{display: none !important;}
 </style>
 <script type="text/javascript">  
     function disptime(){  
@@ -64,7 +65,7 @@ a:visited { color:#0000FF; }
     </form>
     <br>
     <span><a href="https://bbs.nga.cn/" target="_blank">nga</a></span>&nbsp;&nbsp;&nbsp;&nbsp;<span><a href="https://keylol.com/" target="_blank">keylol</a></span>
-    <br><br><br><br><br>
+    <br><br><br><br>
     <div id="myclock"></div>
     <SCRIPT>
         var d = new Date();
