--- a/index.html
+++ b/index.html
@@ -42,7 +42,19 @@ a:link { color:#0000FF; }
 a:visited { color:#0000FF; }
 script{display: none !important;}
 </style>
-<body>
+<script type="text/javascript">  
+    function disptime(){  
+        var today=new Date();  
+        var hh=today.getHours();  
+        var mm=today.getMinutes();  
+        var ss = today.getSeconds();  
+        document.getElementById("myclock").innerHTML="<p>"+hh+":"+mm+":"+ss+"</p>"  
+          
+    }   
+    //setInterval（）
+    var mytime = setInterval("disptime()",1000);  
+</script>  
+<body onload="disptime()">
     <br><br><br>
     <h1><a href="https://holzora.top/" style="color:black;text-decoration:none;">星空小栈</a></h1>
     <br>
@@ -59,5 +71,6 @@ script{display: none !important;}
        document.write(d.getFullYear() + "年" +(d.getMonth() + 1) + "月" + d.getDate() + "日");
        document.write(' 星期'+'日一二三四五六'.charAt(new Date().getDay()));
     </SCRIPT>
+    <div id="myclock"></div>  
 </body>
 </html>
