--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ script{display: none !important;}
     background-color: #fff;
     border: none;
     outline: 0;
+    font-size:16.5px;
     }
 </style>
 <script type="text/javascript">  
