--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="format-detection" content="telephone=no" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <title>星空小栈</title><!-- 欢迎光临个人导航网站 -->
+    <title>星空小栈</title><!-- 欢迎光临个人导航网站，有事请联系邮箱：hozora@foxmail.com -->
     <link rel='icon' href='image/title.ico' type='image/x-ico'>
     <script>
         var _hmt = _hmt || [];
