--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@ script{display: none !important;}
     <div id="main" style="display: none;">
     <span id="runtime_span"></span>
     </div>
-    <script type="text/javascript">function show_runtime(){window.setTimeout("show_runtime()",1000);X=new 
+    <script type="text/javascript">
+        function show_runtime(){window.setTimeout("show_runtime()",1000);X=new 
         Date("03/30/2021 00:00:00");
         Y=new Date();T=(Y.getTime()-X.getTime());M=24*60*60*1000;
         a=T/M;A=Math.floor(a);b=(a-A)*24;B=Math.floor(b);c=(b-B)*60;C=Math.floor((b-B)*60);D=Math.floor((c-C)*60);
