--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ script{display: none !important;}
     <div>
     <button id="btn"><div id="myclock"></div></button>
     </div>
-    <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.js"></script>
     <script>
         $(document).ready(function(){
             $("#btn").click(function() {
