--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>星空小栈</title>
     <!-- 
     欢迎光临个人导航网站！
-    有事请联系邮箱：hozora@foxmail.com 
+    有事请联系邮箱：holzora@foxmail.com 
     -->
     <link rel='icon' href='image/title.ico' type='image/x-ico'>
     <script>
