--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body{
 a{
     text-decoration: none;
     }
-.user-input {
+#search{
     width: 250px;
     height: 40px;
     border: 2px solid blue;
@@ -40,6 +40,7 @@ a{
     text-indent: none;
     margin-top:26px;
     }
+* {padding: 0;margin: 0;}
 input::-ms-input-placeholder{ text-align: center; } 
 input::-webkit-input-placeholder{ text-align: center; }
 a:link { color:#0000FF; }
@@ -52,6 +53,35 @@ script{display: none !important;}
     border: none;
     outline: 0;
     font-size:16.5px;
+    }
+#a2{
+    display: inline-block;
+    width: 100%;
+    text-decoration: none;
+    color: rgb(0, 0, 0) ;
+    outline: none;
+    height: 30px;
+    line-height: 30px;
+    }
+#ul{
+    width: 250px;
+    border: 1px solid #ddd;
+    border-top: 0;
+    border-radius: 5px;
+    text-align: left;
+    background: #fff;
+    }
+li{
+    list-style: none;
+    }
+li:hover{
+    background: #ccc;
+    }
+.wrapper {
+    position: absolute;
+    margin-left: -260px;
+    left: 50%;
+    top: 30%;
     }
 </style>
 <script type="text/javascript">  
@@ -71,10 +101,13 @@ script{display: none !important;}
     <h1><a href="https://holzora.top/" style="color:black;text-decoration:none;">星空小栈</a></h1>
     <br>
     <span><a href="html/catalog.html">音乐</a></span>&nbsp;&nbsp;&nbsp;&nbsp;<span><a href="http://m.sizhicn.com/bookcase.php" target="_blank">小说</a></span>&nbsp;&nbsp;&nbsp;&nbsp;<span><a href="https://ddrk.me/" target="_blank">电影</a></span>&nbsp;&nbsp;&nbsp;&nbsp;<span><a href="https://www.pixiv.net/"target="_blank">插画</a></span>
-    <form action="http://baidu.com/s" target="_blank" method="get">
-        <label for="search"></label>
-        <input class="user-input" type="text" name="wd" id="search" placeholder="请输入关键词搜索">
+    <div class="wrapper">
+    <form  action="http://baidu.com/s" target="_blank" method="get">
+        <input type="text" name="wd" id="search" placeholder="请输入关键词搜索">
     </form>
+    <ul id="ul">
+    </ul>
+    </div>
     <br>
     <span><a href="https://bbs.nga.cn/" target="_blank">nga</a></span>&nbsp;&nbsp;&nbsp;&nbsp;<span><a href="https://keylol.com/" target="_blank">keylol</a></span>
     <br><br><br>
@@ -103,6 +136,58 @@ script{display: none !important;}
         Y=new Date();T=(Y.getTime()-X.getTime());M=24*60*60*1000;
         a=T/M;A=Math.floor(a);b=(a-A)*24;B=Math.floor(b);c=(b-B)*60;C=Math.floor((b-B)*60);D=Math.floor((c-C)*60);
         runtime_span.innerHTML="本站已运行: "+A+"天"+B+"小时"+C+"分"+D+"秒"}show_runtime();
+    </script>
+        <script>
+        var input = document.getElementById('search')
+        var oUl = document.getElementById('ul')
+        input.onkeyup = function () {
+            var value = this.value;
+            var oScript = document.createElement('script');
+            oScript.src = 'https://sp0.baidu.com/5a1Fazu8AA54nxGko9WTAnF6hhy/su?wd=' + value + '&cb=aa'
+            // 核心在这里，
+            // 1.实时获取参数 value
+            // 2.cb=返回值的处理函数（aa）
+            document.body.appendChild(oScript)
+        }
+        function aa(data) {
+            oUl.style.display = 'block';
+            var list = data.s;
+            var str = '';
+            if (list.length > 0) {
+                list.forEach(function (ele, index) {
+                    str += '<li><a href ="https://www.baidu.com/s?wd=' + ele + '" id="a2">' + ele + '</li>';
+                })
+                oUl.innerHTML = str;
+            } else {
+                oUl.style.display = 'none';
+            }
+        }
+    </script>
+    <script>
+        var input = document.getElementById('search')
+        var oUl = document.getElementById('ul')
+        input.onkeyup = function () {
+            var value = this.value;
+            var oScript = document.createElement('script');
+            oScript.src = 'https://sp0.baidu.com/5a1Fazu8AA54nxGko9WTAnF6hhy/su?wd=' + value + '&cb=aa'
+            // 核心在这里，
+            // 1.实时获取参数 value
+            // 2.cb=返回值的处理函数（aa）
+            document.body.appendChild(oScript)
+        }
+        function aa(data) {
+            oUl.style.display = 'block';
+            var list = data.s;
+            var str = '';
+            if (list.length > 0) {
+                list.forEach(function (ele, index) {
+                    str += '<li><a href ="https://www.baidu.com/s?wd=' + ele + '" id="a2">' + ele + '</li>';
+                })
+                oUl.innerHTML = str;
+            } else {
+                oUl.style.display = 'none';
+            }
+        }
     </script>
 </body>
 </html>
