--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ li:hover{
     <h1><a href="#" style="color:black;text-decoration:none;">demo</a></h1>
     <br>
     <span><a href="#">音乐</a></span>&nbsp;&nbsp;&nbsp;&nbsp;<span><a href="#" target="_blank">小说</a></span>&nbsp;&nbsp;&nbsp;&nbsp;<span><a href="#" target="_blank">电影</a></span>&nbsp;&nbsp;&nbsp;&nbsp;<span><a href="#"target="_blank">插画</a></span>
-    <div class="wrapper">
+    <!--这个位置的div--><div class="wrapper">
     <form  action="http://baidu.com/s" target="_blank" method="get">
         <input type="text" name="wd" id="search" placeholder="请输入关键词搜索">
     </form>
