--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@ li:hover{
     background: #ccc;
     }
 .d1{
-    margin-top: 100px;
+    margin-top: 6%;
     }
 .d2{
-    margin-top: 30px;
+    margin-top: 3%;
     }
 .d3{
     margin-top: 100px;
@@ -93,7 +93,7 @@ li:hover{
     position: absolute;
     transform:translate(-50%,-50%);
     left: 50%;
-    top: 38%;
+    top: 36%;
     }
 .d4{
     margin-top: 50px;
