--- a/index.html
+++ b/index.html
@@ -81,19 +81,19 @@ li:hover{
     background: #ccc;
     }
 .d1{
-    margin-top: 6%;
+    margin-top: 7%;
     }
 .d2{
     margin-top: 30px;
     }
 .d3{
-    margin-top: 9%;
+    margin-top: 110px;
     }
 .wrapper {
     position: absolute;
     transform:translate(-50%,-50%);
     left: 50%;
-    top: 36%;
+    top: 220px;
     }
 .d4{
     margin-top: 8%;
