--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ li{
     <br>
     <span><a href="html/catalog.html" id="a2">音乐</a></span>&nbsp;&nbsp;&nbsp;&nbsp;<span><a href="http://m.sizhicn.com/bookcase.php" target="_blank" id="a2">小说</a></span>&nbsp;&nbsp;&nbsp;&nbsp;<span><a href="https://ddrk.me/" target="_blank" id="a2">电影</a></span>&nbsp;&nbsp;&nbsp;&nbsp;<span><a href="https://www.pixiv.net/"target="_blank" id="a2">插画</a></span>
     <div class="wrapper">
-    <form  action="http://baidu.com/s" target="_blank" method="get">
+    <form  action="https://baidu.com/s" target="_blank" method="get">
         <input type="text" name="wd" id="search" placeholder="请输入关键词搜索">
     </form>
     <ul></ul>
