--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <html>
-    <meta http-equiv="refresh" content="0;url=https:holzora.top">
+    <meta http-equiv="refresh" content="0;url=https:">
 </html>
