--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     欢迎光临个人导航网站！
     有事请联系邮箱：holzora@foxmail.com 
     -->
-    <link rel='icon' href='image/title.ico' type='image/x-ico'>
+    <link rel='icon' href='image/favicon.ico' type='image/x-ico'>
     <script>
         var _hmt = _hmt || [];
         (function() {
