--- a/html/d/l/n/index.html
+++ b/html/d/l/n/index.html
@@ -9,7 +9,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   <title>Speed of light</title>
-  <link rel='icon' href='https://holzora.top/image/title.ico' type='image/x-ico'>
+  <link rel='icon' href='https://holzora.top/image/favicon.ico' type='image/x-ico'>
   <script>
 	var _hmt = _hmt || [];
 	(function() {
