--- a/404.html
+++ b/404.html
@@ -5,9 +5,9 @@
             var sec = $(".countd-down p span").text();  
             $(".countd-down p span").text(--sec);
             if (sec > 0)  
-                setTimeout("timeGo();", 1);
+                setTimeout("timeGo();", 1000);
             else  
-                window.location.href = "index.html";  
+                window.location.href = "holzora.top";  
         }  
         timeGo();
     </script>
