--- a/404.html
+++ b/404.html
@@ -1,14 +1,56 @@
 <!DOCTYPE html>
 <html>
-    <script> 
-        function timeGo() {  
-            var sec = $(".countd-down p span").text();  
-            $(".countd-down p span").text(--sec);
-            if (sec > 0)  
-                setTimeout("timeGo();", 1000);
-            else  
-                window.location.href = "holzora.top";  
-        }  
-        timeGo();
-    </script>
+    <script type="text/javascript">  
+        var num = 5;  
+        function redirect() {  
+            num--;  
+            document.getElementById("num").innerHTML=num;  
+            if (num < 0) {  
+            document.getElementById("num").innerHTML = 0;  
+                location.href = "login.html";  
+            }  
+       }  
+       setInterval("redirect()", 1000);  
+    </script> 
+    <style>
+        a{
+        text-decoration: none;
+        }
+    </style>
+    <body>  
+            <div class="admin-content">  
+                 <div class="am-cf am-padding">  
+                     <div class="am-fl am-cf">  
+                         <strong class="am-text-primary am-text-lg">404</strong> / <small>That’s an error</small>  
+                     </div>  
+                 </div>  
+           
+                 <div class="am-g">  
+                    <div class="am-u-sm-12">  
+                        <h2 class="am-text-center am-text-xxxl am-margin-top-lg">404. Not Found</h2>  
+                        <p class="am-text-center">  
+                            没有找到你要的页面  
+                        </p>  
+                        <p class="am-text-center">  
+                            <span id="num">5</span>秒后自动跳转到首页<a href="index.html">马上跳转</a>  
+                        </p>  
+                        <pre class="page-404">          
+                  .----.  
+               _.'__    `.  
+           .--($)($$)---/#\  
+         .' @          /###\  
+         :         ,   #####  
+          `-..__.-' _.-\###/  
+                `;_:    `"'  
+              .'"""""`.  
+             /,  ya ,\\  
+            //  404!  \\  
+            `-._______.-'  
+            ___`. | .'___  
+           (______|______)  
+                </pre>  
+                    </div>  
+                </div>  
+            </div>  
+    </body>  
 </html>
