--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
             document.getElementById("num").innerHTML=num;  
             if (num < 0) {  
             document.getElementById("num").innerHTML = 0;  
-                location.href = "login.html";  
+                location.href = "index.html";  
             }  
        }  
        setInterval("redirect()", 1000);  
@@ -34,7 +34,7 @@
                         <p class="am-text-center">  
                             <span id="num">5</span>秒后自动跳转到首页<a href="index.html">马上跳转</a>  
                         </p>  
-                        <pre class="page-404">          
+        <pre class="page-404">          
                   .----.  
                _.'__    `.  
            .--($)($$)---/#\  
@@ -48,7 +48,7 @@
             `-._______.-'  
             ___`. | .'___  
            (______|______)  
-                </pre>  
+        </pre>  
                     </div>  
                 </div>  
             </div>  
