--- a/404.html
+++ b/404.html
@@ -13,18 +13,12 @@
        setInterval("redirect()", 1000);  
     </script> 
     <style>
-        a{
-        text-decoration: none;
-        }
+        body{
+            text-align: center
+            }
     </style>
     <body>  
-            <div class="admin-content">  
-                 <div class="am-cf am-padding">  
-                     <div class="am-fl am-cf">  
-                         <strong class="am-text-primary am-text-lg">404</strong> / <small>That’s an error</small>  
-                     </div>  
-                 </div>  
-           
+        <br><br><br><br>
                  <div class="am-g">  
                     <div class="am-u-sm-12">  
                         <h2 class="am-text-center am-text-xxxl am-margin-top-lg">404. Not Found</h2>  
