--- a/404.html
+++ b/404.html
@@ -1,5 +1,28 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+        <meta name="format-detection" content="telephone=no" />
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+        <title>网页不存在</title>
+    <!-- 
+    欢迎光临个人导航网站！
+    有事请联系邮箱：holzora@foxmail.com 
+    -->
+        <link rel='icon' href='image/favicon.ico' type='image/x-ico'>
+    <script>
+        var _hmt = _hmt || [];
+        (function() {
+          var hm = document.createElement("script");
+          hm.src = "https://hm.baidu.com/hm.js?8be43ebecbd8a2ea29801a4997c95208";
+          var s = document.getElementsByTagName("script")[0]; 
+          s.parentNode.insertBefore(hm, s);
+        })();
+        </script>        
+    </head>
     <script type="text/javascript">  
         var num = 5;  
         function redirect() {  
@@ -7,7 +30,7 @@
             document.getElementById("num").innerHTML=num;  
             if (num < 0) {  
             document.getElementById("num").innerHTML = 0;  
-                location.href = "index.html";  
+                location.href = "https:holzora.top/";  
             }  
        }  
        setInterval("redirect()", 1000);  
@@ -26,7 +49,7 @@
                             没有找到你要的页面  
                         </p>  
                         <p class="am-text-center">  
-                            <span id="num">5</span>秒后自动跳转到首页<a href="index.html">马上跳转</a>  
+                            <span id="num">5</span>秒后自动跳转到首页<a href="https:holzora.top/">马上跳转</a>  
                         </p>  
         <pre class="page-404">          
                   .----.  
